fixed styles added menu

--- a/hopefulweb/page1.html
+++ b/hopefulweb/page1.html
@@ -10,13 +10,14 @@
 
     <body>
         <!--NAVBAR START-->
-        <div class="NAVBAR">
-            <nav>
+        <nav>
+            <ul class="NAVBAR">
+                <p id = "NNAME">Hopefulfire</p>
                 <a href="page2.html"><li class="NAVBUT">Products</li></a>
                 <li class="NAVBUT">test</li>
                 <li class="NAVBUT">test</li>
-            </nav>
-        </div>
+            </ul>
+        </nav> 
         <!--NAVBAR END-->
 
     </body>
