Added a nav bar

--- a/hopefulweb/page1.html
+++ b/hopefulweb/page1.html
@@ -10,14 +10,13 @@
 
     <body>
         <!--NAVBAR START-->
-        <nav>
-            <ul class="NAVBAR">
-                <p id = "NNAME">Hopefulfire</p>
-                <a href="page2.html"><li class="NAVBUT">Products</li></a>
-                <li class="NAVBUT">test</li>
-                <li class="NAVBUT">test</li>
-            </ul>
+        <nav class="NAVBAR">
+            <img id="NAV_LOG" src="GlobalImages/Hopeful-NoWords.png" alt="Hopefulfire logo" title="Hopefulfire logo"><p id = "NNAME">Hopefulfire</p>
+            <a href="page2.html"><li id="LAST" class="NAVBUT">Products</li></a>
+            <li class="NAVBUT">Test</li>
+            <li class="NAVBUT">test</li>
         </nav> 
+        
         <!--NAVBAR END-->
 
     </body>
