--- a/hopefulweb/page1.html
+++ b/hopefulweb/page1.html
@@ -3,21 +3,27 @@
 
     <head>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Hopeful</title>
+        <title>Hopefulfire</title>
         <link rel="Icon" href="GlobalImages/Hopeful-NoWords.png">
         <link rel="stylesheet" href="GlobalCSS/styles.css">
     </head>
 
     <body>
         <!--NAVBAR START-->
-        <nav class="NAVBAR">
-            <img id="NAV_LOG" src="GlobalImages/Hopeful-NoWords.png" alt="Hopefulfire logo" title="Hopefulfire logo"><p id = "NNAME">Hopefulfire</p>
-            <a href="page2.html"><li id="LAST" class="NAVBUT">Products</li></a>
-            <li class="NAVBUT">Test</li>
-            <li class="NAVBUT">test</li>
-        </nav> 
-        
+        <section>
+            <nav class="NAVBAR">
+                <a href="page1.html" title="Go Home"><img id="NAV_LOG" src="GlobalImages/Hopeful-NoWords.png" alt="Hopefulfire logo" title="Hopefulfire logo"><p id = "NNAME">Hopefulfire</p></a>
+                <li class="NAVBUT" title="team">Team</li>
+                <a href="page2.html" title="Products"><li id="LAST" class="NAVBUT">Products</li></a>
+                <a href="page1.html" title="Home"><li class="NAVBUT">Home</li></a>
+            </nav> 
+        </section>
         <!--NAVBAR END-->
+        <section>
+            <article>
+                <h1></h1>
+            </article>
+        </section>
 
     </body>
 </html>
