--- a/hopefulweb/page1.html
+++ b/hopefulweb/page1.html
@@ -13,15 +13,18 @@
         <section>
             <nav class="NAVBAR">
                 <a href="page1.html" title="Go Home"><img id="NAV_LOG" src="GlobalImages/Hopeful-NoWords.png" alt="Hopefulfire logo" title="Hopefulfire logo"><p id = "NNAME">Hopefulfire</p></a>
-                <li class="NAVBUT" title="team">Team</li>
-                <a href="page2.html" title="Products"><li id="LAST" class="NAVBUT">Products</li></a>
+                <li class="NAVBUT NAVLAS" title="team">Contact Us</li>
+                <a href="page2.html" title="Products"><li class="NAVBUT">Products</li></a>
                 <a href="page1.html" title="Home"><li class="NAVBUT">Home</li></a>
             </nav> 
         </section>
         <!--NAVBAR END-->
-        <section>
-            <article>
-                <h1></h1>
+        <section class="Mission">
+            <img id="topA" src="GlobalImages/Code.jpg" alt="test">
+            <img id="topB" src="GlobalImages/1_29NeeIGT0BElEBNfzE_VlQ.jpg" alt="test">
+            <article class="Mission">
+                <h1 class="Mission">Our Mission</h1>
+                <p class="Mission">Hopefulfire is deticated to free and open source software. We persue easy to use open source software for the average user. This is how we shape our company goals as we move forward. However, we also think that privacy is of utmost importance. This is why we will never share data with any 3rd parties. </p>
             </article>
         </section>
 
