--- a/hopefulweb/page2.html
+++ b/hopefulweb/page2.html
@@ -9,13 +9,13 @@
     </head>
 
     <body>
-        <!--NAVBAR START-->
+         <!--NAVBAR START-->
         <section>
             <nav class="NAVBAR">
-                <a href="page1.html"><img id="NAV_LOG" src="GlobalImages/Hopeful-NoWords.png" alt="Hopefulfire logo" title="Hopefulfire logo"><p id = "NNAME">Hopefulfire</p></a>
-                <a href="page2.html"><li id="LAST" class="NAVBUT">Products</li></a>
-                <li class="NAVBUT">Test</li>
-                <li class="NAVBUT">test</li>
+                <a href="page1.html" title="Go Home"><img id="NAV_LOG" src="GlobalImages/Hopeful-NoWords.png" alt="Hopefulfire logo" title="Hopefulfire logo"><p id = "NNAME">Hopefulfire</p></a>
+                <li class="NAVBUT" title="team">Contact Us</li>
+                <a href="page2.html" title="Products"><li class="NAVBUT">Products</li></a>
+                <a href="page1.html" title="Home"><li class="NAVBUT">Home</li></a>
             </nav> 
         </section>
         <!--NAVBAR END-->
