renamed file to allow functionality T-T

--- a/hopefulweb/index.html
+++ b/hopefulweb/index.html
@@ -15,7 +15,7 @@
                 <a href="page1.html" title="Go Home"><img id="NAV_LOG" src="GlobalImages/Hopeful-NoWords.png" alt="Hopefulfire logo" title="Hopefulfire logo"><p id = "NNAME">Hopefulfire</p></a>
                 <li class="NAVBUT NAVLAS" title="team">Contact Us</li>
                 <a href="page2.html" title="Products"><li class="NAVBUT">Products</li></a>
-                <a href="page1.html" title="Home"><li class="NAVBUT">Home</li></a>
+                <a href="index.html" title="Home"><li class="NAVBUT">Home</li></a>
             </nav> 
         </section>
         <!--NAVBAR END-->
