--- a/hopefulweb/index.html
+++ b/hopefulweb/index.html
@@ -12,8 +12,8 @@
         <!--NAVBAR START-->
         <section>
             <nav class="NAVBAR">
-                <a href="page1.html" title="Go Home"><img id="NAV_LOG" src="GlobalImages/Hopeful-NoWords.png" alt="Hopefulfire logo" title="Hopefulfire logo"><p id = "NNAME">Hopefulfire</p></a>
-                <li class="NAVBUT NAVLAS" title="team">Contact Us</li>
+                <a href="index.html" title="Go Home"><img id="NAV_LOG" src="GlobalImages/Hopeful-NoWords.png" alt="Hopefulfire logo" title="Hopefulfire logo"><p id = "NNAME">Hopefulfire</p></a>
+                <a href="page3.html"><li class="NAVBUT" title="Contact Us">Contact Us</li></a>
                 <a href="page2.html" title="Products"><li class="NAVBUT">Products</li></a>
                 <a href="index.html" title="Home"><li class="NAVBUT">Home</li></a>
             </nav> 
@@ -26,6 +26,7 @@
                 <h1 class="Mission">Our Mission</h1>
                 <p class="Mission">Hopefulfire is deticated to free and open source software. We persue easy to use open source software for the average user. This is how we shape our company goals as we move forward. However, we also think that privacy is of utmost importance. This is why we will never share data with any 3rd parties. </p>
             </article>
+
         </section>
 
     </body>
