--- a/hopefulweb/page2.html
+++ b/hopefulweb/page2.html
@@ -12,8 +12,8 @@
          <!--NAVBAR START-->
         <section>
             <nav class="NAVBAR">
-                <a href="page1.html" title="Go Home"><img id="NAV_LOG" src="GlobalImages/Hopeful-NoWords.png" alt="Hopefulfire logo" title="Hopefulfire logo"><p id = "NNAME">Hopefulfire</p></a>
-                <li class="NAVBUT NAVLAS" title="team">Contact Us</li>
+                <a href="index.html" title="Go Home"><img id="NAV_LOG" src="GlobalImages/Hopeful-NoWords.png" alt="Hopefulfire logo" title="Hopefulfire logo"><p id = "NNAME">Hopefulfire</p></a>
+                <a href="page3.html"><li class="NAVBUT" title="Contact Us">Contact Us</li></a>
                 <a href="page2.html" title="Products"><li class="NAVBUT">Products</li></a>
                 <a href="index.html" title="Home"><li class="NAVBUT">Home</li></a>
             </nav> 
